[tool.poetry]
name = "renso"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.0"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^3.1.0"
Jinja2 = "^3.1.1"
flask-restx = "^0.5.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
stripe = "^2.70.0"
alembic = "^1.7.7"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
